--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <body>
     <h2>Rest countries, I am going to you.</h2>
 
+    <div class="countries" id="countries">
+        
+    </div>
+
     <!-- javascript link -->
         <script src="js/countries.js"></script>
 </body>
