--- a/index.html
+++ b/index.html
@@ -5,16 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rest countries</title>
+    <!-- bootstrap link  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- css styles link  -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h2>Rest countries, I am going to you.</h2>
 
-    <div class="countries" id="countries">
+    <div class="container">
+        <div class=" row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4  " id="countries">
         
+        </div>
     </div>
-
+    <!-- bootstrap javascript link  -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <!-- javascript link -->
         <script src="js/countries.js"></script>
 </body>
